# port-wait

./: README.md  pyproject.toml
src/port_wait/: __init__.py  cli.py  waiter.py
tests/: test_cli.py  test_waiter.py
